# Solitaire

./: CMakeLists.txt  README.md
src/: game.cpp
